@@ -1,3 +1,7 @@
+Improvements :
+
+* Added repr() functionality to NullObject and ObjectVector bindings.
+
 7.7.2 :
 
 Bug Fixes :
